<resources>
    <string name="app_name">Infortec</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_login">Sem login Efetuado</string>
    <string name="title_activity_test">test</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="LoginPasswordText">Password</string>
    <string name="loginButtonText">Login</string>
    <string name="loginRegistarText">Registar</string>
    <string name="Login_loginUtilizadorText">Login de Utilizador</string>
    <string name="LoginUsernameText">Username</string>
    <string name="SignupRegistarText">Registar</string>
    <string name="Signup_nomeProprioText">Nome Proprio</string>
    <string name="SignupUsername">Username</string>
    <string name="SignupEmail">Email</string>
    <string name="SignupNif">NIF</string>
    <string name="SignupPasswordText">Inserir Password</string>
    <string name="SignupConfPasswordText">Confirmar palavra passe</string>
    <string name="SignupRegistarButton">Registar</string>
    <string name="UserProfileTituloText">Perfil De Utilizador</string>
    <string name="UserProfilenomeText">Nome Próprio:</string>
    <string name="UserProfileEmailText">Email:</string>
    <string name="UserProfilemoradaText">Morada:</string>
    <string name="UserProfileNifText">NIF:</string>
    <string name="UserProfilesalvarButton">Guardar</string>
    <string name="preference_file">MyPref</string>
    <string name="sobre">Sobre Nós</string>
    <string name="sobre_title">Sobre</string>
</resources>
