<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:orientation="vertical">

    <Space
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:text="@string/SignupRegistarText"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/space3"
        tools:layout_editor_absoluteX="93dp" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="-27dp" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/Signup_nomeProprioText"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/space"
        tools:layout_editor_absoluteX="10dp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/SignupUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/SignupEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextNif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/SignupNif"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/SignupPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/editTextNif"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/SignupConfPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/botaoRegistar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:onClick="onClick"
        android:text="@string/SignupRegistarButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>